Add CMake for libPPUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,7 @@ project(
 )
 
 add_subdirectory(pfc)
+
+# Windows Template Library (WTL) is required by libPPUI
+add_subdirectory(wtl)
+add_subdirectory(libPPUI)
