Add CMake to foobar2000_SDK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ add_subdirectory(pfc)
 # Windows Template Library (WTL) is required by libPPUI
 add_subdirectory(wtl)
 add_subdirectory(libPPUI)
+
+add_subdirectory(foobar2000)
