--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  CMAKE_PRESET: x64-msvc-release
+  BUILD_TYPE: RelWithDebInfo
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Configure CMake
-      run: cmake --preset ${{ env.CMAKE_PRESET }}
+      run: cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -G Ninja
 
     - name: Build
-      run: cmake --preset ${{ env.CMAKE_PRESET }} --build
+      run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
